--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@ionic/angular": "^4.7.1",
     "cordova-android": "^8.1.0",
     "cordova-browser": "^6.0.0",
+    "cordova-common": "^3.2.1",
+    "cordova-ios": "^5.1.1",
     "cordova-plugin-advanced-http": "^2.3.1",
     "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-googlemaps": "^2.6.2",
@@ -71,10 +73,7 @@
   "description": "An Ionic project",
   "cordova": {
     "plugins": {
-      "cordova-plugin-googlemaps": {
-        "API_KEY_FOR_ANDROID": "AIzaSyB47KccZa8VRlzFuQJAvZ8UPembfW-3gq4",
-        "API_KEY_FOR_IOS": "AIzaSyB47KccZa8VRlzFuQJAvZ8UPembfW-3gq4"
-      },
+      "cordova-plugin-googlemaps": {},
       "cordova-plugin-whitelist": {},
       "cordova-plugin-statusbar": {},
       "cordova-plugin-device": {},
@@ -87,7 +86,8 @@
     },
     "platforms": [
       "browser",
-      "android"
+      "android",
+      "ios"
     ]
   }
 }
