--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ionic-native/core": "^5.19.1",
     "@ionic-native/google-maps": "^5.5.0",
     "@ionic-native/http": "^5.19.1",
+    "@ionic-native/native-storage": "^5.19.1",
     "@ionic-native/splash-screen": "^5.19.1",
     "@ionic-native/status-bar": "^5.19.1",
     "@ionic/angular": "^4.7.1",
@@ -35,6 +36,7 @@
     "cordova-plugin-app-version": "^0.1.9",
     "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-googlemaps": "^2.6.2",
+    "cordova-plugin-nativestorage": "^2.3.2",
     "core-js": "^3.6.4",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
@@ -92,7 +94,8 @@
         "LOCATION_WHEN_IN_USE_DESCRIPTION": "This app wants to get your location while this app runs only.",
         "LOCATION_ALWAYS_USAGE_DESCRIPTION": "This app wants to get your location always, even this app runs in background."
       },
-      "cordova-plugin-app-version": {}
+      "cordova-plugin-app-version": {},
+      "cordova-plugin-nativestorage": {}
     },
     "platforms": [
       "browser",
