--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^8.2.14",
     "@angular/platform-browser-dynamic": "^8.2.14",
     "@angular/router": "^8.2.14",
+    "@auth0/angular-jwt": "^3.0.1",
     "@ionic-native/app-version": "^5.19.1",
     "@ionic-native/core": "^5.19.1",
     "@ionic-native/google-maps": "^5.5.0",
@@ -28,6 +29,7 @@
     "@ionic-native/splash-screen": "^5.19.1",
     "@ionic-native/status-bar": "^5.19.1",
     "@ionic/angular": "^4.7.1",
+    "@ionic/storage": "^2.2.0",
     "cordova-android": "^8.1.0",
     "cordova-browser": "^6.0.0",
     "cordova-common": "^3.2.1",
